@@ -22,6 +22,7 @@ defined ( '_ISVALID' ) or die ( 'You cannot access this file directly!' );
 $user_can_update_password = false;
 $admin_can_add_user = false;
 $admin_can_delete_user = true; // will not affect IMAP server info
+$admin_can_disable_user = false;
 
 // Allow auto-creation of WebCalendar Accounts for fully authenticated users
 $allow_auto_create = true;
@@ -34,7 +35,7 @@ $allow_auto_create = true;
 // This file contains all the functions for getting information
 // about users via IMAP
 //
-$imap_host = 'localhost'; // Where is the IMAP server
+$imap_host = 'yourserver.com'; // Where is the IMAP server
 $imap_port = '143';          // The IMAP server port
 
 /* quoteIMAP($str)
@@ -270,7 +271,7 @@ function user_load_variables ( $login, $prefix ) {
  * @global string Error message
  */
 function user_add_user ( $user, $password, $firstname,
-  $lastname, $email, $admin ) {
+  $lastname, $email, $admin, $enabled='Y' ) {
   global $error;
 
   if ( $user == '__public__' ) {
@@ -298,10 +299,10 @@ function user_add_user ( $user, $password, $firstname,
     $admin = 'N';
   $sql = 'INSERT INTO webcal_user ' .
     '( cal_login, cal_lastname, cal_firstname, ' .
-    'cal_is_admin, cal_passwd, cal_email ) ' .
+    'cal_is_admin, cal_passwd, cal_email, cal_enabled ) ' .
     'VALUES ( ?, ?, ?, ?, ?, ? )';
   if ( ! dbi_execute ( $sql, array ( $user, $ulastname,
-    $ufirstname, $admin, $upassword, $uemail ) ) ) {
+    $ufirstname, $admin, $upassword, $uemail, $enabled ) ) ) {
     $error = db_error ();
     return false;
   }
@@ -321,7 +322,8 @@ function user_add_user ( $user, $password, $firstname,
  *
  * @global string Error message
  */
-function user_update_user ( $user, $firstname, $lastname, $email, $admin ) {
+function user_update_user ( $user, $firstname, $lastname, $email, 
+  $admin, $enabled='Y' ) {
   global $error;
 
   if ( $user == '__public__' ) {
@@ -342,11 +344,14 @@ function user_update_user ( $user, $firstname, $lastname, $email, $admin ) {
     $ulastname = NULL;
   if ( $admin != 'Y' )
     $admin = 'N';
-
+  if ( $enabled != 'Y' )
+    $enabled = 'N';
+		
   $sql = 'UPDATE webcal_user SET cal_lastname = ?, ' .
     'cal_firstname = ?, cal_email = ?,' .
-    'cal_is_admin = ? WHERE cal_login = ?';
-  if ( ! dbi_execute ( $sql, array ( $ulastname, $ufirstname, $uemail, $admin, $user  ) ) ) {
+    'cal_is_admin = ?, cal_enabled = ?  WHERE cal_login = ?';
+  if ( ! dbi_execute ( $sql, array ( $ulastname, $ufirstname, $uemail, 
+	  $admin, $enabled, $user  ) ) ) {
     $error = db_error ();
     return false;
   }
